# tomlq

./: .gitignore  CHANGELOG.md  Makefile  README.md  test.sh  tomlq.cabal
.github/workflows/: haskell.yml
lib/Tomlq/: Doc.hs  Parser.hs  Types.hs
src/: Main.hs  Tomlq.hs
src/Tomlq/: Doc.hs  Parser.hs  Types.hs
test/: Spec.hs
