cabal-version:       2.2

name:                tomlq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tomlq#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable tomlq
  hs-source-dirs:      src
  main-is:             Tomlq.hs
  other-modules:       Tomlq.Types
                     , Tomlq.Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , toml-parser
                     , megaparsec
                     , containers
                     , optparse-applicative
                     , raw-strings-qq
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
