cabal-version:       2.2

name:                tomlq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tomlq#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      lib
  exposed-modules:     Tomlq.Types
                     , Tomlq.Parser
                     , Tomlq.Doc
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010
  build-depends:       base
                     , parser-combinators
                     , toml-parser
                     , megaparsec
                     , containers
                     
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints  
                       -fwrite-ide-info
                       -hiedir=.hie                               
executable tomlq
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , raw-strings-qq
                     , tomlq
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:  base >= 4.7 && < 5
                , tomlq
                , hspec
                , containers
               